@@ -9,6 +9,7 @@
 - EventCounterAdapter and MeterAdapter are now enabled on startup by default.
 - Added some debug metrics to indicate the number of metric families, instances and timeseries being exported by prometheus-net.
 - Added typical benchmark results to readme for easy reference, and to show relative speed of the simple versus complex instruments.
+- Removed MetricConfiguration.StaticLabels because it had negative performance impact on many code paths that did not use it. The same functionality can be manually implemented in user code. Static labels remain available on registry and factory level.
 * 6.0.0
 - Dropped library support for unsupported .NET runtime versions (.NET 2.1).
 - If Razor Pages is enabled, the "page" label is now automatically added to the default HTTP server metrics, unless there is a user-defined label already present with this name.
